# internal/api/handlers/handlers.go
@@ -40,9 +40,12 @@ func AttachAllRoutes(s *api.Server) {
 		wallet.GetWalletAddressRoute(s),
 		wallet.GetWalletListRoute(s),
 		wallet.GetWithdrawsRoute(s),
+		wallet.PostApproveWithdrawRoute(s),
 		wallet.PostCollectRoute(s),
+		wallet.PostCreateHotWalletRoute(s),
 		wallet.PostCreateWalletRoute(s),
 		wallet.PostRebalanceRoute(s),
+		wallet.PostRejectWithdrawRoute(s),
 		wallet.PostSignTransactionRoute(s),
 		wallet.PostWithdrawRoute(s),
 		wellknown.GetAndroidDigitalAssetLinksRoute(s),
