# internal/types/wallet/post_create_hot_wallet_route_parameters.go
@@ -1,0 +1,95 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package wallet
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+
+	"github/chapool/go-wallet/internal/types"
+)
+
+// NewPostCreateHotWalletRouteParams creates a new PostCreateHotWalletRouteParams object
+// no default values defined in spec.
+func NewPostCreateHotWalletRouteParams() PostCreateHotWalletRouteParams {
+
+	return PostCreateHotWalletRouteParams{}
+}
+
+// PostCreateHotWalletRouteParams contains all the bound params for the post create hot wallet route operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters PostCreateHotWalletRoute
+type PostCreateHotWalletRouteParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  Required: true
+	  In: body
+	*/
+	Body *types.PostCreateHotWalletPayload
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewPostCreateHotWalletRouteParams() beforehand.
+func (o *PostCreateHotWalletRouteParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.PostCreateHotWalletPayload
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("body", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("body", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("body", "body", ""))
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *PostCreateHotWalletRouteParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// body
+	// Required: true
+
+	// body is validated in endpoint
+	//if err := o.Body.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
