# internal/types/wallet/post_reject_withdraw_route_parameters.go
@@ -1,0 +1,139 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package wallet
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+
+	"github/chapool/go-wallet/internal/types"
+)
+
+// NewPostRejectWithdrawRouteParams creates a new PostRejectWithdrawRouteParams object
+// no default values defined in spec.
+func NewPostRejectWithdrawRouteParams() PostRejectWithdrawRouteParams {
+
+	return PostRejectWithdrawRouteParams{}
+}
+
+// PostRejectWithdrawRouteParams contains all the bound params for the post reject withdraw route operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters PostRejectWithdrawRoute
+type PostRejectWithdrawRouteParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  In: body
+	*/
+	Body *types.PostRejectWithdrawPayload
+	/*Withdraw ID to reject
+	  Required: true
+	  In: path
+	*/
+	WithdrawID strfmt.UUID `param:"withdrawId"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewPostRejectWithdrawRouteParams() beforehand.
+func (o *PostRejectWithdrawRouteParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.PostRejectWithdrawPayload
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			res = append(res, errors.NewParseError("body", "body", "", err))
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	}
+	rWithdrawID, rhkWithdrawID, _ := route.Params.GetOK("withdrawId")
+	if err := o.bindWithdrawID(rWithdrawID, rhkWithdrawID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *PostRejectWithdrawRouteParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// body
+	// Required: false
+
+	// body is validated in endpoint
+	//if err := o.Body.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	// withdrawId
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	if err := o.validateWithdrawID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindWithdrawID binds and validates parameter WithdrawID from path.
+func (o *PostRejectWithdrawRouteParams) bindWithdrawID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	// Format: uuid
+	value, err := formats.Parse("uuid", raw)
+	if err != nil {
+		return errors.InvalidType("withdrawId", "path", "strfmt.UUID", raw)
+	}
+	o.WithdrawID = *(value.(*strfmt.UUID))
+
+	if err := o.validateWithdrawID(formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// validateWithdrawID carries on validations for parameter WithdrawID
+func (o *PostRejectWithdrawRouteParams) validateWithdrawID(formats strfmt.Registry) error {
+
+	if err := validate.FormatOf("withdrawId", "path", "uuid", o.WithdrawID.String(), formats); err != nil {
+		return err
+	}
+	return nil
+}
